--- a/swish.cabal
+++ b/swish.cabal
@@ -64,7 +64,6 @@ Library
       mtl >= 1 && < 3,
       HUnit == 1.2.*
    Exposed-Modules:
-      Paths_swish
       Swish.HaskellRDF.BuiltInDatatypes
       Swish.HaskellRDF.BuiltInMap
       Swish.HaskellRDF.BuiltInRules
@@ -117,26 +116,29 @@ Library
    -- hide the Sort modules since aim to replace these in the near future
    -- and their documentation doesn't build at the moment
    other-modules:
-                        Swish.HaskellRDF.Sort.AdaptiveHeapSort
-                        Swish.HaskellRDF.Sort.BraunHeap
-                        Swish.HaskellRDF.Sort.CartesianTree
-                        Swish.HaskellRDF.Sort.DigitalSort
-                        Swish.HaskellRDF.Sort.FingerSearchtree
-                        Swish.HaskellRDF.Sort.Force
-                        Swish.HaskellRDF.Sort.HeapSort
-                        Swish.HaskellRDF.Sort.LibBase
-                        Swish.HaskellRDF.Sort.ListLib
-                        Swish.HaskellRDF.Sort.MargeSort
-                        Swish.HaskellRDF.Sort.MergeSort
-                        Swish.HaskellRDF.Sort.PairingHeap
-                        Swish.HaskellRDF.Sort.QuickSort
-                        Swish.HaskellRDF.Sort.RedBlackTree
-                        Swish.HaskellRDF.Sort.SplaySort
-                        Swish.HaskellRDF.Sort.Squiggol
-                        Swish.HaskellRDF.Sort.Stable
+      Paths_swish
+      Swish.HaskellRDF.Sort.AdaptiveHeapSort
+      Swish.HaskellRDF.Sort.BraunHeap
+      Swish.HaskellRDF.Sort.CartesianTree
+      Swish.HaskellRDF.Sort.DigitalSort
+      Swish.HaskellRDF.Sort.FingerSearchtree
+      Swish.HaskellRDF.Sort.Force
+      Swish.HaskellRDF.Sort.HeapSort
+      Swish.HaskellRDF.Sort.LibBase
+      Swish.HaskellRDF.Sort.ListLib
+      Swish.HaskellRDF.Sort.MargeSort
+      Swish.HaskellRDF.Sort.MergeSort
+      Swish.HaskellRDF.Sort.PairingHeap
+      Swish.HaskellRDF.Sort.QuickSort
+      Swish.HaskellRDF.Sort.RedBlackTree
+      Swish.HaskellRDF.Sort.SplaySort
+      Swish.HaskellRDF.Sort.Squiggol
+      Swish.HaskellRDF.Sort.Stable
 
-   extensions:          CPP, ParallelListComp
-   ghc-options:         -Wall -fexcess-precision -funbox-strict-fields -auto-all
+   -- extensions:
+   --   CPP, ParallelListComp
+   ghc-options:
+      -Wall -fexcess-precision -funbox-strict-fields -auto-all
 
 
 Executable         BuiltInMapTest
