--- a/swish.cabal
+++ b/swish.cabal
@@ -95,7 +95,7 @@ Library
       Swish.HaskellRDF.Rule
       Swish.HaskellRDF.Ruleset
       Swish.HaskellRDF.SwishCommands
-      Swish.HaskellRDF.SwishMain
+      -- Swish.HaskellRDF.SwishMain
       Swish.HaskellRDF.SwishMonad
       Swish.HaskellRDF.SwishScript
       Swish.HaskellRDF.VarBinding
@@ -114,7 +114,7 @@ Library
    -- hide the Sort modules since aim to replace these in the near future
    -- and their documentation doesn't build at the moment
    other-modules:
-      Paths_swish
+      -- Paths_swish
       Swish.HaskellRDF.Sort.LibBase
       Swish.HaskellRDF.Sort.QuickSort
 
@@ -123,13 +123,6 @@ Library
 
 Executable         BuiltInMapTest
    Main-Is:        Swish/HaskellRDF/BuiltInMapTest.hs
-   Other-Modules:  Swish.HaskellRDF.BuiltInMap
-                   Swish.HaskellRDF.RDFDatatypeXsdInteger
-                   Swish.HaskellRDF.Ruleset
-                   Swish.HaskellUtils.Namespace
-                   Swish.HaskellRDF.Vocabulary
-                   Swish.HaskellUtils.LookupMap
-                   Swish.HaskellUtils.ListHelpers
 
 --   YOH ADRIAN QNAME ISSUES Executable         ClassRestrictionRuleTest
 --   YOH ADRIAN QNAME ISSUES    Main-Is:        Swish/HaskellRDF/ClassRestrictionRuleTest.hs
@@ -145,134 +138,42 @@ Executable         BuiltInMapTest
 
 Executable         GraphPartitionTest
    Main-Is:        Swish/HaskellRDF/GraphPartitionTest.hs
-   Other-Modules:  Swish.HaskellRDF.GraphPartition
-                   Swish.HaskellRDF.GraphClass
-                   Swish.HaskellUtils.TestHelpers
-                   Swish.HaskellUtils.ListHelpers
 
 Executable         GraphTest
    Main-Is:        Swish/HaskellRDF/GraphTest.hs
-   Other-Modules:  Swish.HaskellUtils.ListHelpers
-                   Swish.HaskellUtils.MiscHelpers
-                   Swish.HaskellUtils.LookupMap
-                   Swish.HaskellRDF.GraphClass
-                   Swish.HaskellRDF.GraphMem
-                   Swish.HaskellRDF.GraphMatch
 
 Executable         N3ParserTest
    Main-Is:        Swish/HaskellRDF/N3ParserTest.hs
-   Other-Modules:  Swish.HaskellRDF.N3Parser
-                   Swish.HaskellRDF.RDFParser
-                   Swish.HaskellRDF.RDFGraph
-                   Swish.HaskellUtils.QName
-                   Swish.HaskellRDF.Vocabulary
-                   Swish.HaskellUtils.LookupMap
-                   Swish.HaskellRDF.GraphClass
 
 Executable         N3FormatterTest
    Main-Is:        Swish/HaskellRDF/N3FormatterTest.hs
-   Other-Modules:  Swish.HaskellRDF.N3Formatter
-                   Swish.HaskellRDF.N3Parser
-                   Swish.HaskellRDF.RDFParser
-                   Swish.HaskellRDF.RDFGraph
-                   Swish.HaskellUtils.Namespace
-                   Swish.HaskellRDF.Vocabulary
-                   Swish.HaskellUtils.QName
-                   Swish.HaskellUtils.LookupMap
-                   Swish.HaskellRDF.GraphClass
-                   Swish.HaskellUtils.ErrorM
 
 Executable         RDFDatatypeXsdIntegerTest
    Main-Is:        Swish/HaskellRDF/RDFDatatypeXsdIntegerTest.hs
-   Other-Modules:  Swish.HaskellRDF.RDFDatatypeXsdInteger
-                   Swish.HaskellRDF.RDFRuleset
-                   Swish.HaskellRDF.RDFVarBinding
-                   Swish.HaskellRDF.RDFDatatype
-                   Swish.HaskellRDF.RDFGraph
-                   Swish.HaskellRDF.ClassRestrictionRule
-                   Swish.HaskellRDF.MapXsdInteger
-                   Swish.HaskellRDF.Datatype
-                   Swish.HaskellRDF.Ruleset
-                   Swish.HaskellRDF.Rule
-                   Swish.HaskellUtils.Namespace
-                   Swish.HaskellRDF.Vocabulary 
-                   Swish.HaskellRDF.VarBinding
 
 Executable         RDFGraphTest
    Main-Is:        Swish/HaskellRDF/RDFGraphTest.hs
-   Other-Modules:  Swish.HaskellUtils.LookupMap
-                   Swish.HaskellUtils.ListHelpers
-                   Swish.HaskellRDF.GraphClass
-                   Swish.HaskellUtils.Namespace
-                   Swish.HaskellUtils.QName
-                   Swish.HaskellRDF.RDFGraph  
-                   Swish.HaskellRDF.Vocabulary  
 
 Executable         RDFProofContextTest
    Main-Is:        Swish/HaskellRDF/RDFProofContextTest.hs
-   Other-Modules:  Swish.HaskellRDF.BuiltInMap
-                   Swish.HaskellRDF.RDFProofContext
-                   Swish.HaskellRDF.RDFProof
-                   Swish.HaskellRDF.RDFRuleset
-                   Swish.HaskellRDF.RDFGraph
-                   Swish.HaskellRDF.RDFGraphShowM
-                   Swish.HaskellRDF.Proof
-                   Swish.HaskellRDF.Ruleset
-                   Swish.HaskellRDF.Rule
-                   Swish.HaskellUtils.Namespace
-                   Swish.HaskellUtils.LookupMap
-                   Swish.HaskellRDF.Vocabulary
                     
 Executable         RDFProofText
    Main-Is:        Swish/HaskellRDF/RDFProofTest.hs
-   Other-Modules:  Swish.HaskellRDF.RDFProof
-                   Swish.HaskellRDF.RDFQuery
-                   Swish.HaskellRDF.RDFVarBinding
-                   Swish.HaskellRDF.RDFRuleset
-                   Swish.HaskellRDF.RDFGraph
-                   Swish.HaskellRDF.VarBinding
-                   Swish.HaskellRDF.Rule
-                   Swish.HaskellUtils.Namespace
                      
 Executable         RDFQueryTest
    Main-Is:        Swish/HaskellRDF/RDFQueryTest.hs
-   Other-Modules:  Swish.HaskellRDF.RDFQuery
-                   Swish.HaskellRDF.RDFVarBinding
-                   Swish.HaskellRDF.RDFGraph 
-                   Swish.HaskellUtils.Namespace
-                   Swish.HaskellRDF.Vocabulary
-                   Swish.HaskellRDF.N3Parser
-                   Swish.HaskellRDF.RDFParser
-                   Swish.HaskellUtils.QName
-                   Swish.HaskellUtils.ListHelpers
-                   Swish.HaskellUtils.ErrorM
 
 Executable         RDFRulesetTest
    Main-Is:        Swish/HaskellRDF/RDFRulesetTest.hs
-   Other-Modules:  Swish.HaskellRDF.RDFRuleset
-                   Swish.HaskellRDF.RDFQuery
-                   Swish.HaskellRDF.RDFVarBinding
-                   Swish.HaskellRDF.RDFGraph
-                   Swish.HaskellRDF.Ruleset
-                   Swish.HaskellRDF.Rule
-                   Swish.HaskellUtils.Namespace
-                   Swish.HaskellRDF.Vocabulary
-                   Swish.HaskellUtils.QName
 
 Executable         VarBindingTest
    Main-Is:        Swish/HaskellRDF/VarBindingTest.hs
-   Other-Modules:  Swish.HaskellRDF.VarBinding
-                   Swish.HaskellRDF.Vocabulary
-                   Swish.HaskellUtils.ListHelpers
 
 Executable         LookupMapTest
    Main-Is:        Swish/HaskellUtils/LookupMapTest.hs
-   Other-Modules:  Swish.HaskellUtils.LookupMap
-                   Swish.HaskellUtils.ListHelpers
 
 Executable         QNameTest
    Main-Is:        Swish/HaskellUtils/QNameTest.hs
-   Other-Modules:  Swish.HaskellUtils.QName
 
  -- we do not have the data files to run this test
  Executable         SwishTest
@@ -282,5 +183,6 @@ Executable         QNameTest
 Executable         Swish
    Main-Is:        Swish/HaskellRDF/Swish.hs
    Other-Modules:  Swish.HaskellRDF.SwishMain
+                   Paths_swish
 
 
