--- a/swish.cabal
+++ b/swish.cabal
@@ -121,6 +121,7 @@ Library
    ghc-options:
       -Wall -fexcess-precision -funbox-strict-fields -auto-all
 
+
 Executable         BuiltInMapTest
    Main-Is:        Swish/HaskellRDF/BuiltInMapTest.hs
 
@@ -141,6 +142,9 @@ Executable         GraphPartitionTest
 
 Executable         GraphTest
    Main-Is:        Swish/HaskellRDF/GraphTest.hs
+
+Executable         NTParserTest
+   Main-Is:        Swish/HaskellRDF/NTParserTest.hs
 
 Executable         N3ParserTest
    Main-Is:        Swish/HaskellRDF/N3ParserTest.hs
