--- a/swish.cabal
+++ b/swish.cabal
@@ -63,7 +63,9 @@ Library
       old-time == 1.0.*,
       mtl >= 1 && < 3,
       HUnit == 1.2.*,
-      network >= 2.2 && < 2.4
+      network >= 2.2 && < 2.4,
+      directory >= 1.0 && <= 1.1,
+      filepath >= 1.1 && <= 1.2
    Exposed-Modules:
       Swish.HaskellRDF.BuiltInDatatypes
       Swish.HaskellRDF.BuiltInMap
