Swish: added -b command-line argument to set base URI + internal clean up to exit status handling
--HG--
branch : parser-update

--- a/swish.cabal
+++ b/swish.cabal
@@ -191,4 +191,6 @@ Executable         Swish
    Other-Modules:  Swish.HaskellRDF.SwishMain
                    Paths_swish
 
+   ghc-options:
+      -Wall -fexcess-precision -funbox-strict-fields -auto-all
 
