--- a/swish.cabal
+++ b/swish.cabal
@@ -1,8 +1,10 @@
 Name:                swish
 Version:             0.3.0.0
+Stability:           experimental
 License:             LGPL
 License-file:        LICENSE 
 Author:              Graham Klyne - GK@ninebynine.org
+Copyright:           (c) 2003, 2004 G. Klyne; 2009 Vasili I Galchin; 2011 Doug Burke; All rights reserved.
 Maintainer:          dburke@cfa.harvard.edu
 Homepage:            https://bitbucket.org/doug_burke/swish
 Bug-reports:         https://bitbucket.org/doug_burke/swish/issues
@@ -38,16 +40,25 @@ Description:        Swish is a framework, written in the purely functional
                     .
                     * Complete, ready-to-run, command-line and script-driven programs.
                     .
-                    References
+                    ChangeLog:
                     .
-                    1) <http://www.ninebynine.org/RDFNotes/Swish/Intro.html>
+                    [Version 0.3.0.0] is an attempt to update 
+                    version 0.2.1 (<http://hackage.haskell.org/package/swish-0.2.1/>)
+		    to build against
+                    a recent ghc install, with some clean ups - including support for
+                    the current N3 specification - and the addition of the
+                    NTriples format. It has not been tested against ghc7.
                     .
-                    2) <http://www.ninebynine.org/Software/swish-0.2.1.html>
+                    References:
                     .
-                    3) CWM: <http://www.w3.org/2000/10/swap/doc/cwm.html>
+                      - <http://www.ninebynine.org/RDFNotes/Swish/Intro.html>
+                    .
+                      - <http://www.ninebynine.org/Software/swish-0.2.1.html>
+                    .
+                      - CWM: <http://www.w3.org/2000/10/swap/doc/cwm.html>
                     .
 
-Tested-With:         GHC>=6.12.3
+Tested-With:         GHC==6.12.3
 Build-Type:          Simple
 Data-Files:          README
 
